# DjangoReact

./: .gitignore  README.md
DjangoBackend/settings/: settings.py
DjangoBackend/shopping/migrations/: 0001_initial.py
DjangoBackend/shopping/models/: __init__.py  customer.py  order_list.py  product.py
backend/: pyproject.toml
backend/domain/: user.py
backend/models/: user.py
backend/repository/: user.py
backend/settings/: settings.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: index.css  index.js
