[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KaniKim <kkh5428@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
psycopg2 = "^2.9.6"
django = "^4.2.1"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
